# tiny-plm

./: .gitignore  README.md  pyproject.toml
configs/: 40k.toml  40k_s2.toml  5k.toml  800k.toml
scripts/: compare_loss_curves.py  download_uniref50.sh  forward_pass_test.py  split_fasta.py
src/plm_pretraining/: run_training.py  tiny_protein_lm.py  train.py
src/tiny_plm/: run_training.py  train.py
src/tiny_plm/utils/: __init__.py  plotting.py
