[project]
name = "tiny-plm"
version = "0.1.0"
description = "Training a simple protein language model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.87",
    "matplotlib>=3.11.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[project.scripts]
train-tiny = "tiny_plm.run_training:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_plm"]
